--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,38 @@ h1 {
 .photographer_section article h2 {
     color: #D3573C;
     font-size: 36px;
+    margin-bottom: 0;
+    font-weight: 200;
+}
+
+.photographer_section #location {
+    color: #D3573C;
+    margin-top: 0.2rem;
+    margin-bottom: 0;
+}
+
+.photographer_section #tagline {
+    margin: 0;
+    font-size: small;
+}
+
+.photographer_section #price {
+    margin: 0;
+    color: #525252;
+    font-size: small;
+}
+
+.photographer_section a {
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin: 0 auto !important;
 }
