--- a/css/photographer.css
+++ b/css/photographer.css
@@ -150,8 +150,8 @@ main {
 .photo-gallery {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    /* margin: 2rem 0; */
+    margin : 0 -1.5rem;
+    /* justify-content: space-between; */
 }
 
 .title-likes {
@@ -160,9 +160,14 @@ main {
     justify-content: space-between;
 }
 
-.photo-container img, video {
+.photo-container {
+    margin: 1.5rem;
+    width: 30%
+}
+
+.photo-container img, .photo-container video {
     height: 400px;
-    width: 450px;
+    width: 100%;
     border-radius: 10px;
     object-fit: cover;
 }
@@ -179,14 +184,31 @@ main {
 
 /* height et width impactent photos et video page photographe */
 .photo-lightbox img, video {
-    height: 500px;
-    width: 500px;
+    height: 700px;
+    width: 700px;
     object-fit: cover;
     border-radius: 5px;
 }
 
-#lightbox-container p {
+#lightbox {
     color: #901C1C; 
+}
+
+.lightbox-main-container {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+#left-arrow {
+    margin-right: 30px;
+}
+
+#close-lightbox {
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin-right: 15px;
 }
 
 .contact_button {
